Added functionality to tiny url project, /u/short id redirects to /longurl/id with status codes generated for existing paths being redirected and non existent paths

--- a/day2/views/partials/_header.ejs
+++ b/day2/views/partials/_header.ejs
@@ -4,7 +4,7 @@
     <div class="navbar-header">
         <a class="navbar-brand">
             <span class="glyphicon glyphicon glyphicon-tree-deciduous"></span>
-            EJS Is Fun
+            Test Header
         </a>
 
     </div>
