--- a/day2/views/urls_show_short.ejs
+++ b/day2/views/urls_show_short.ejs
@@ -3,14 +3,14 @@
 <head>
   <title>ShowEjs</title>
 </head>
-
-<body>
-  <!-- Add your EJS code here -->
-<h2>Variable</h2>
-<p><%= templateVars %></p>
 <header>
   <% include ./partials/_header.ejs %>
 </header>
+<body>
+  <!-- Add your EJS code here -->
+<h2>Short URL for url provided</h2>
+<p> ID: <%= shortURL %></p>
+
 
 </body>
 </html>
