--- a/day2/views/partials/_header.ejs
+++ b/day2/views/partials/_header.ejs
@@ -5,6 +5,9 @@
         <a class="navbar-brand">
             <span class="glyphicon glyphicon glyphicon-tree-deciduous"></span>
             Test Header
+            <form style="display: inline;" method="GET" action="/urls">
+              <input type="submit" value="Home">
+            </form>
         </a>
 
     </div>
