--- a/day2/views/urls_index.ejs
+++ b/day2/views/urls_index.ejs
@@ -3,31 +3,33 @@
 <head>
   <title>TinyApp</title>
 </head>
-  <header>
-    <%include ./partials/_header.ejs %>
-  </header>
+<header>
+  <%include ./partials/_header.ejs %>
+</header>
 <body>
   <!-- Add your EJS code here -->
   <form method="POST" action="/urls/new">
     <h1> URLs
-    <input type="submit" value="New URL">
+      <input type="submit" value="New URL">
     </h1>
   </form>
 
 
-    <!-- need a forEach to show keys here -->
-    <% for (key in urls) {%>
-    <h2>
-      <form method="POST" action="/urls/<%= key %>/delete">
+  <!-- need a forEach to show keys here -->
+  <% for (key in urls) {%>
+  <h2>
+    <form style="display: inline;" method="POST" action="/urls/<%= key %>">
       <%= key+"-->" %>
       <%= urls[key] %>
-        <input type="submit" value="Delete">
-      </form>
-      <form method="POST" action="/urls/<%= key %>">
-        <input type="submit" value="Edit">
-      </form>
-    </h2>
-    <% } %>
+      <input type="submit" value="Edit">
+    </form>
+
+    <form style="display: inline;" method="POST" action="/urls/<%= key %>/delete">
+      <input type="submit" value="Delete">
+    </form>
+
+  </h2>
+  <% } %>
 
 
 </body>
