minor style changes

--- a/day2/views/urls_new.ejs
+++ b/day2/views/urls_new.ejs
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head></head>
-  <body style="font-size:20px; padding:50px;">
-    <% include partials/_header %>
+  <head>
+     <title>New URL</title>
+  </head>
+  <header style="font-size: 16px; padding: 0px;">
+   <% include partials/_header %>
+  </header>
+  <body style="font-size:20px; padding: 0px;">
     <form action="/urls" method="POST" style="margin:150px;">
       <label for="longURL">Enter a URL to create an ID:</label>
       <input id="longURL" type="text" name="longURL" placeholder="http://example.com" style="width: 300px">
