--- a/day2/views/urls_show.ejs
+++ b/day2/views/urls_show.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Edit Long URL</title>
+  <title>Edit URL</title>
 </head>
 <header>
   <% include ./partials/_header.ejs %>
