reattempted branch, added username form to _header

--- a/day2/views/partials/_header.ejs
+++ b/day2/views/partials/_header.ejs
@@ -4,5 +4,9 @@
   Test Header
   <form style="display: inline;" method="GET" action="/urls">
     <input type="submit" value="Home">
+  <form style="display: inline;" method="GET" action="/urls">
+    <label for="username">Username:</label>
+  <input id="username" type="text" name="username" placeholder="john123" style="width: 300px">
+  <input type="submit" value="Submit">
   </form>
 </div>
