registration form stores info + added register button in header to direct to the form, form redirects to /urls when submited

--- a/day2/views/partials/_header.ejs
+++ b/day2/views/partials/_header.ejs
@@ -6,6 +6,9 @@
   <form style="display: inline;" method="GET" action="/urls">
     <input type="submit" value="Home">
   </form>
+  <form style="display: inline;" method="GET" action="/register">
+    <input type="submit" value="Register">
+  </form>
   <body>
     <% if(username == undefined){ %>
     <form style="display: inline;" method="POST" action="/login">
