--- a/day2/views/urls_register.ejs
+++ b/day2/views/urls_register.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-     <title>New URL</title>
+     <title>Registration</title>
   </head>
   <header style="font-size: 16px; padding: 0px;">
    <% include partials/_header %>
