Stopped at end of task 5 for the day, changed userID from being user selected to randomly generated by same function as short urls

--- a/day2/views/urls_register.ejs
+++ b/day2/views/urls_register.ejs
@@ -9,7 +9,7 @@
   <body style="font-size:20px; padding: 0px;">
     <form action="/register" method="POST" style="margin:150px;">
       <label for="email">Register here: </label> </br>
-      <input id="id" type="id" name="id" placeholder="username" style="width: 300px"> </br>
+      <!-- <input id="id" type="id" name="id" placeholder="username" style="width: 300px"> </br> -->
       <input id="email" type="email" name="email" placeholder="email@example.com" style="width: 300px"> </br>
       <input id="password" type="password" name="password" placeholder="p4ssw0rd" style="width: 300px">
       <input type="submit" value="Submit">
