--- a/day2/views/urls_index.ejs
+++ b/day2/views/urls_index.ejs
@@ -13,13 +13,15 @@
       <input type="submit" value="New URL">
     </h1>
   </form>
+  <h2>
+    Access at /u/shortUrl or click the short URLs below!
 
 
   <!-- need a forEach to show keys here -->
   <% for (key in urls) {%>
   <h2>
     <form style="display: inline;" method="POST" action="/urls/<%= key %>">
-      <%= key+"-->" %>
+      <a href=<%="/u/"+key%>><%= key+"-->" %></a>
       <%= urls[key] %>
       <input type="submit" value="Edit">
     </form>
