--- a/day2/views/urls_login.ejs
+++ b/day2/views/urls_login.ejs
@@ -7,8 +7,8 @@
    <% include partials/_header %>
   </header>
   <body style="font-size:20px; padding: 0px;">
-    <form action="/register" method="POST" style="margin:150px;">
-      <label for="email">Register here: </label> </br>
+    <form action="/login" method="POST" style="margin:150px;">
+      <label for="email">Login here: </label> </br>
       <input id="email" type="email" name="email" placeholder="email@example.com" style="width: 300px"> </br>
       <input id="password" type="password" name="password" placeholder="p4ssw0rd" style="width: 300px">
       <input type="submit" value="Submit">
