--- a/day2/views/urls_login.ejs
+++ b/day2/views/urls_login.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-     <title>Registration</title>
+     <title>Login</title>
   </head>
   <header style="font-size: 16px; padding: 0px;">
    <% include partials/_header %>
