--- a/day2/views/partials/_header.ejs
+++ b/day2/views/partials/_header.ejs
@@ -7,7 +7,7 @@
     <input type="submit" value="Home">
   </form>
   <body>
-    <% if(userID === undefined){ %>
+    <% if(userID == undefined){ %>
     <form style="display: inline;" method="GET" action="/login">
       <input type="submit" value="Login">
     </form>
