added cookie and password protection, did a final run through check of functions required by project

--- a/tinyurl/views/partials/_header.ejs
+++ b/tinyurl/views/partials/_header.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <div class="container-fluid">
   <span class="glyphicon glyphicon glyphicon-tree-deciduous"></span>
-  Test Header
+  Tiny URL
   <form style="display: inline;" method="GET" action="/urls">
     <input type="submit" value="Home">
   </form>
