--- a/tinyurl/views/urls_index.ejs
+++ b/tinyurl/views/urls_index.ejs
@@ -37,7 +37,7 @@
   <% } %>
   <% if (counter === 0) { %>
     <h1 style="color: red">
-      Login to see your URLs
+      Login to see your URLs or add some with 'New URL'
     </h1>
   <% } %>
 
