adding screenshots to readme

--- a/tinyurl/views/urls_index.ejs
+++ b/tinyurl/views/urls_index.ejs
@@ -22,23 +22,24 @@
   <% for (key in urls) { %>
     <% if (urls[key].urlID === userID ) { %>
       <% counter += 1; %>
-      <h2>
-        <form style="display: inline;" method="POST" action="/urls/<%= key %>">
+      <li>
+
           <a href=<%="/u/"+key%>><%= key+"-->" %></a>
           <%= urls[key].url %>
+        <form style="display: inline;" method="GET" action="/urls/<%= key %>">
           <input type="submit" value="Edit">
         </form>
 
         <form style="display: inline;" method="POST" action="/urls/<%= key %>/delete">
           <input type="submit" value="Delete">
         </form>
-      </h2>
+      </li>
     <% } %>
   <% } %>
   <% if (counter === 0) { %>
-    <h1 style="color: red">
+    <h2 style="color: red">
       Login to see your URLs or add some with 'New URL'
-    </h1>
+    </h2>
   <% } %>
 
 </body>
