--- a/tinyurl/views/urls_new.ejs
+++ b/tinyurl/views/urls_new.ejs
@@ -8,7 +8,7 @@
   </header>
   <body style="font-size:20px; padding: 0px;">
     <form action="/urls" method="POST" style="margin:150px;">
-      <label for="longURL">Enter a URL to create an ID:</label>
+      <label for="longURL">Enter a URL (with http://) to create an ID:</label>
       <input id="longURL" type="text" name="longURL" placeholder="http://example.com" style="width: 300px">
       <input type="submit" value="Submit">
     </form>
