trying to make some styling changes to tinyurl

--- a/tinyurl/views/partials/_header.ejs
+++ b/tinyurl/views/partials/_header.ejs
@@ -1,24 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
-<div class="container-fluid">
-  <span class="glyphicon glyphicon glyphicon-tree-deciduous"></span>
-  Tiny URL
-  <form style="display: inline;" method="GET" action="/urls">
-    <input type="submit" value="Home">
-  </form>
-  <body>
-    <% if(userID == undefined){ %>
-    <form style="display: inline;" method="GET" action="/login">
-      <input type="submit" value="Login">
-    </form>
-    <form style="display: inline;" method="GET" action="/register">
-      <input type="submit" value="Register">
-    </form>
-    <% } else { %>
-    <form style="display: inline;" method="POST" action="/logout">
-      <%= 'Logged in as: ' + users[userID].email %>
-      <input type="submit" value="Logout">
-    </form>
-    <% } %>
-  </body>
-</div>
+<html lang='en'>
+<head>
+  <meta charset="utf-8">
+</head>
+
+<body>
+  <div class="container-fluid">
+
+    <div id="masthead">
+      <div class="container">
+        <span class="glyphicon glyphicon glyphicon-tree-deciduous"></span>
+        Tiny URL
+        <form style="display: inline;" method="GET" action="/urls">
+          <input type="submit" value="Home">
+        </form>
+
+        <% if(userID == undefined){ %>
+        <form style="display: inline;" method="GET" action="/login">
+          <input type="submit" value="Login">
+        </form>
+        <form style="display: inline;" method="GET" action="/register">
+          <input type="submit" value="Register">
+        </form>
+        <% } else { %>
+        <form style="display: inline;" method="POST" action="/logout">
+          <%= 'Logged in as: ' + users[userID].email %>
+          <input type="submit" value="Logout">
+        </form>
+        <% } %>
+      </div>
+    </div>
+  </div>
+</body>
