--- a/tinyurl/views/urls_login.ejs
+++ b/tinyurl/views/urls_login.ejs
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-     <title>Login</title>
-  </head>
-  <header style="font-size: 16px; padding: 0px;">
-   <% include partials/_header %>
-  </header>
-  <body style="font-size:20px; padding: 0px;">
-    <form action="/login" method="POST" style="margin:150px;">
+<html lang='en'>
+<head>
+  <meta charset="utf-8">
+  <title>Login</title>
+  <link rel="stylesheet" href="./tinyurlstyle.css">
+</head>
+  <body>
+    <div id="wrapper">
+    <form class="form-signin" action="/login" method="POST" style="margin:150px;">
       <label for="email">Login here: </label> </br>
-      <input id="email" type="email" name="email" placeholder="email@example.com" style="width: 300px"> </br>
-      <input id="password" type="password" name="password" placeholder="p4ssw0rd" style="width: 300px">
+      <input id="email" type="email" name="email" placeholder="email@example.com" style="width: 300px" autofocus> </br>
+      <input id="password" type="password" name="password" placeholder="p4ssw0rd" style="width: 300px" >
       <input type="submit" value="Submit">
     </form>
+  </div>
   </body>
 </html>
