--- a/tinyurl/views/urls_new.ejs
+++ b/tinyurl/views/urls_new.ejs
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-     <title>New URL</title>
-  </head>
+<html lang='en'>
+<head>
+  <meta charset="utf-8">
+  <title>New URL</title>
+  <<link rel="stylesheet" href="./tinyurlstyle.css">
+</head>
   <header style="font-size: 16px; padding: 0px;">
    <% include partials/_header %>
   </header>
-  <body style="font-size:20px; padding: 0px;">
+  <body>
+    <div id="wrapper">
     <form action="/urls" method="POST" style="margin:150px;">
       <label for="longURL">Enter a URL (with http://) to create an ID:</label>
       <input id="longURL" type="text" name="longURL" placeholder="http://example.com" style="width: 300px">
       <input type="submit" value="Submit">
     </form>
+  </div>
   </body>
 </html>
