--- a/tinyurl/views/urls_register.ejs
+++ b/tinyurl/views/urls_register.ejs
@@ -2,8 +2,8 @@
 <html lang='en'>
 <head>
   <meta charset="utf-8">
+  <% include partials/_style %>
   <title>Register</title>
-  <link rel="stylesheet" href="./tinyurlstyle.css">
 </head>
   <header style="font-size: 16px; padding: 0px;">
    <% include partials/_header %>
