--- a/tinyurl/views/urls_show.ejs
+++ b/tinyurl/views/urls_show.ejs
@@ -2,8 +2,8 @@
 <html lang='en'>
 <head>
   <meta charset="utf-8">
+  <% include partials/_style %>
   <title>Update URL</title>
-  <link rel="stylesheet" href="./tinyurlstyle.css">
 </head>
 <header>
   <% include ./partials/_header.ejs %>
