--- a/tinyurl/views/urls_index.ejs
+++ b/tinyurl/views/urls_index.ejs
@@ -2,8 +2,8 @@
 <html lang='en'>
 <head>
   <meta charset="utf-8">
+  <% include partials/_style %>
   <title>Tiny App</title>
-  <link rel="stylesheet" href="tinyurlstyle.css" type="text/css">
 </head>
 
 <header>
@@ -14,21 +14,19 @@
   <div id="wrapper"> </br>
   <!-- Add your EJS code here -->
   <form method="POST" action="/urls/new">
-    <h1> URLs
+    <h1> URLs:
       <input type="submit" value="New URL">
     </h1>
   </form>
   <h2>
   Access at /u/shortUrl or click the short URLs below!
   </h2>
-</div>
   <!-- need a forEach to show keys here -->
   <% let counter = 0; %>
   <% for (key in urls) { %>
     <% if (urls[key].urlID === userID ) { %>
       <% counter += 1; %>
-      <li>
-
+      <h3>
           <a href=<%="/u/"+key%>><%= key+"-->" %></a>
           <%= urls[key].url %>
         <form style="display: inline;" method="GET" action="/urls/<%= key %>">
@@ -38,13 +36,14 @@
         <form style="display: inline;" method="POST" action="/urls/<%= key %>/delete">
           <input type="submit" value="Delete">
         </form>
-      </li>
+      </h3>
     <% } %>
   <% } %>
   <% if (counter === 0) { %>
-    <h2 style="color: #ff7f50">
-      Login to see your URLs or add some with 'New URL'
+    <h2 style="color: black">
+      *Login to see your URLs or add one with 'New URL'*
     </h2>
   <% } %>
+  </div>
 </body>
 </html>
