--- a/tinyurl/views/urls_login.ejs
+++ b/tinyurl/views/urls_login.ejs
@@ -2,9 +2,12 @@
 <html lang='en'>
 <head>
   <meta charset="utf-8">
+  <% include partials/_style %>
   <title>Login</title>
-  <link rel="stylesheet" href="./tinyurlstyle.css">
 </head>
+ <header style="font-size: 16px; padding: 0px;">
+   <% include partials/_header %>
+  </header>
   <body>
     <div id="wrapper">
     <form class="form-signin" action="/login" method="POST" style="margin:150px;">
