--- a/tinyurl/views/urls_index.ejs
+++ b/tinyurl/views/urls_index.ejs
@@ -33,7 +33,8 @@
           <input type="submit" value="Edit">
         </form>
 
-        <form style="display: inline;" method="POST" action="/urls/<%= key %>/delete">
+        <!-- <form style="display: inline;" method="POST" action="/urls/<%= key %>/delete"> -->
+          <form style="display: inline;" method="POST" action="/urls/<%= key %>?_method=DELETE">
           <input type="submit" value="Delete">
         </form>
       </h3>
