Finished analytics stretch requirement, adding unique visit tracker as well as timestamps and users in a list of visits

--- a/tinyurl/views/partials/_style.ejs
+++ b/tinyurl/views/partials/_style.ejs
@@ -12,6 +12,23 @@ body {
   padding-left: 100px;
   margin: auto;
 }
+#columncontainer {
+  /*padding-left: 100px;*/
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin: auto
+}
+#column1 {
+  display: grid;
+  align-items: center;
+  margin: auto;
+}
+  #column2 {
+  display: grid;
+  align-items: left;
+  margin: auto;
+}
+
 .header {
     background-color: #428bca;
     padding: 20px;
